--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@
 # Project setup
 ########################################################################
 cmake_minimum_required(VERSION 2.6)
-project(gr-sm200a CXX C)
+project(gr-sm200 CXX C)
 enable_testing()
 
 #install to PyBOMBS target prefix if defined
@@ -89,7 +89,7 @@ set(Boost_ADDITIONAL_VERSIONS
 find_package(Boost "1.35" COMPONENTS filesystem system)
 
 if(NOT Boost_FOUND)
-    message(FATAL_ERROR "Boost required to compile sm200a")
+    message(FATAL_ERROR "Boost required to compile sm200")
 endif()
 
 ########################################################################
@@ -98,7 +98,7 @@ endif()
 include(GrPlatform) #define LIB_SUFFIX
 set(GR_RUNTIME_DIR      bin)
 set(GR_LIBRARY_DIR      lib${LIB_SUFFIX})
-set(GR_INCLUDE_DIR      include/sm200a)
+set(GR_INCLUDE_DIR      include/sm200)
 set(GR_DATA_DIR         share)
 set(GR_PKG_DATA_DIR     ${GR_DATA_DIR}/${CMAKE_PROJECT_NAME})
 set(GR_DOC_DIR          ${GR_DATA_DIR}/doc)
@@ -145,7 +145,7 @@ list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_SOURCE_DIR}/cmake/Modules)
 include(GrVersion)
 
 if(NOT CPPUNIT_FOUND)
-    message(FATAL_ERROR "CppUnit required to compile sm200a")
+    message(FATAL_ERROR "CppUnit required to compile sm200")
 endif()
 
 ########################################################################
@@ -177,8 +177,8 @@ link_directories(
 )
 
 # Set component parameters
-set(GR_SM200A_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "" FORCE)
-set(GR_SM200A_SWIG_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/swig CACHE INTERNAL "" FORCE)
+set(GR_SM200_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "" FORCE)
+set(GR_SM200_SWIG_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/swig CACHE INTERNAL "" FORCE)
 
 ########################################################################
 # Create uninstall target
@@ -195,7 +195,7 @@ add_custom_target(uninstall
 ########################################################################
 # Add subdirectories
 ########################################################################
-add_subdirectory(include/sm200a)
+add_subdirectory(include/sm200)
 add_subdirectory(lib)
 add_subdirectory(swig)
 add_subdirectory(python)
@@ -210,6 +210,6 @@ if(NOT CMAKE_MODULES_DIR)
   set(CMAKE_MODULES_DIR lib${LIB_SUFFIX}/cmake)
 endif(NOT CMAKE_MODULES_DIR)
 
-install(FILES cmake/Modules/sm200aConfig.cmake
-    DESTINATION ${CMAKE_MODULES_DIR}/sm200a
+install(FILES cmake/Modules/sm200Config.cmake
+    DESTINATION ${CMAKE_MODULES_DIR}/sm200
 )
